# conan-template

./: .clang-format  .clang-tidy  .cmake-format.json  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
cmake/: get-target-sources.cmake
src/: main.cpp
